test/errors/E020.m3
MODULE E020;

VAR a := 1.0;

BEGIN

INC(a) ; <*ERROR 020*>

END E020.
